# skyweb

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  cUsersfrancdevskywebscriptstest_data_dump.json  firebase.json  pyproject.toml  report.html  skyweb-workspace.code-workspace
.github/workflows/: deploy.yml
archive/web-v0/: vite.config.ts
core/adapters/: kml_parser.py
core/api/: app.py  auth.py  deps.py
core/contracts/: __init__.py  aerodrome.py  aerodrome_notes.py  aircraft.py  airspace.py  common.py  dossier.py  enums.py  flight.py  result.py  route.py  waypoint.py  weather.py
core/etl/: cli.py  gcs_uploader.py  sia_parser.py  spatialite_builder.py  tile_generator.py
core/persistence/: errors.py  firestore_client.py
core/services/: briefing_service.py  elevation.py  notam_service.py  route_corrector.py  vac_downloader.py  weather_service.py
core/tests/: test_vac_downloader.py
data/demo/: LFXU-LFFU-2025-09-25-14-51-39.kml
docs/: DESIGN-contracts.md  DESIGN-import-route-sdvfr.md  DESIGN-meteo-tab.md  DESIGN-persistence.md  DESIGN-preparation-vol-vfr.md  DESIGN-ui-preparation-vol.md  DESIGN-weather.md  PLAN-architecture-validation.md  PLAN-preparation-vol-vfr.md  SCHEMA-aerodrome-tables.md  SPEC-preparation-vol-vfr.md  SPEC-skypath-web.md
docs/sources/: 4120-yymm LFXU-LFdd-LFXU.md  Modèle Log Nav V2.xlsx
scripts/: dump_test_data.py  test_data_dump.json
tests/api/: conftest.py  test_aircraft.py  test_auth.py  test_dossiers.py  test_flights.py  (+2 more)
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+106 files in other folders)
